SDKs/microsoft.com/cognitiveservices-Training/2.1/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            GetDomainRequest req = new GetDomainRequest() {{
                pathParams = new GetDomainPathParams() {{
                    domainId = "eos";
                }};
                headers = new GetDomainHeaders() {{
                    trainingKey = "libero";
                }};
            }};

            GetDomainResponse res = sdk.domainsApi.getDomain(req);

            if (res.domain.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### DomainsApi

* `getDomain` - Get information about a specific domain
* `getDomains` - Get a list of the available domains

### ImageApi

* `createImagesFromData` - Add the provided images to the set of training images
* `deleteImageRegions` - Delete a set of image regions
* `deleteImageTags` - Remove a set of tags from a set of images
* `deleteImages` - Delete images from the set of training images
* `getImagesByIds` - Get images by id for a given project iteration
* `getTaggedImageCount` - Gets the number of images tagged with the provided {tagIds}
* `getTaggedImages` - Get tagged images for a given project iteration
* `getUntaggedImageCount` - Gets the number of untagged images
* `getUntaggedImages` - Get untagged images for a given project iteration

### ImageRegionProposalApi

* `getImageRegionProposals` - Get region proposals for an image. Returns empty array if no proposals are found.

### PredictionsApi

* `deletePrediction` - Delete a set of predicted images and their associated prediction results
* `quickTestImage` - Quick test an image
* `quickTestImageUrl` - Quick test an image url

### ProjectApi

* `createProject` - Create a project
* `deleteIteration` - Delete a specific iteration of a project
* `deleteProject` - Delete a specific project
* `exportIteration` - Export a trained iteration
* `getExports` - Get the list of exports for a specific iteration
* `getImagePerformanceCount` - Gets the number of images tagged with the provided {tagIds} that have prediction results from
training for the provided iteration {iterationId}
* `getImagePerformances` - Get image with its prediction for a given project iteration
* `getIteration` - Get a specific iteration
* `getIterationPerformance` - Get detailed performance information about an iteration
* `getIterations` - Get iterations for the project
* `getProject` - Get a specific project
* `getProjects` - Get your projects
* `trainProject` - Queues project for training
* `updateIteration` - Update a specific iteration
* `updateProject` - Update a specific project

### TagsApi

* `createTag` - Create a tag for the project
* `deleteTag` - Delete a tag from the project
* `getTag` - Get information about a specific tag
* `getTags` - Get the tags for a given project and iteration
* `updateTag` - Update a tag

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
